--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aptos-labs/wallet-adapter-core": "^7.10.1",
     "@aptos-labs/wallet-adapter-react": "^7.2.7",
     "@hookform/resolvers": "^3.10.0",
+    "@nightlylabs/aptos-wallet-adapter-plugin": "^0.2.12",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
